--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     --green-light: #e3f5ee;
     --red: #c0392b;
     --red-light: #fdecea;
+    --amber: #e67e22;
     --orange: #e67e22;
     --orange-light: #fef5e7;
     --gray-dark: #2c3e50;
@@ -1510,6 +1511,11 @@
         <button onclick="setMudmapTool('pen')" id="mudmapToolPen" style="font-size:12px;padding:7px 14px;border-radius:8px;border:2px solid var(--blue-deep);background:var(--blue-deep);color:white;font-weight:700;cursor:pointer;">✏️ Draw Route</button>
         <button onclick="setMudmapTool('dot')" id="mudmapToolDot" style="font-size:12px;padding:7px 14px;border-radius:8px;border:2px solid var(--blue-mid);background:white;color:var(--blue-mid);font-weight:700;cursor:pointer;opacity:0.55;">📍 Mark Tank</button>
         <button onclick="setMudmapTool('pan')" id="mudmapToolPan" style="font-size:12px;padding:7px 14px;border-radius:8px;border:2px solid var(--gray-mid);background:white;color:var(--gray-mid);font-weight:700;cursor:pointer;opacity:0.55;">🖐 Pan Map</button>
+        <div style="display:flex;gap:4px;align-items:center;border:2px solid var(--gray-mid);border-radius:8px;overflow:hidden;">
+          <button onclick="mudmapZoom(1)" title="Zoom in" style="font-size:16px;padding:5px 13px;border:none;background:white;color:var(--blue-deep);font-weight:700;cursor:pointer;line-height:1;">+</button>
+          <div style="width:1px;background:var(--gray-mid);align-self:stretch;"></div>
+          <button onclick="mudmapZoom(-1)" title="Zoom out" style="font-size:16px;padding:5px 13px;border:none;background:white;color:var(--blue-deep);font-weight:700;cursor:pointer;line-height:1;">−</button>
+        </div>
         <div style="flex:1;"></div>
         <button onclick="undoMudmap()" style="font-size:12px;padding:7px 14px;border-radius:8px;border:2px solid var(--amber);background:white;color:var(--amber);font-weight:700;cursor:pointer;">↩ Undo</button>
         <button onclick="clearMudmap()" style="font-size:12px;padding:7px 14px;border-radius:8px;border:2px solid var(--red);background:white;color:var(--red);font-weight:700;cursor:pointer;">✕ Clear All</button>
@@ -3826,7 +3832,7 @@ function initMudmap() {
 let mudmapTileData = null;
 let mudmapTileW = 0, mudmapTileH = 0;
 let tileOffsetX = 0, tileOffsetY = 0;
-let mudmapCurrentLat = null, mudmapCurrentLon = null, mudmapCurrentZoom = 18;
+let mudmapCurrentLat = null, mudmapCurrentLon = null, mudmapCurrentZoom = 17;
 
 function refillMudmapTiles() {
   if (mudmapCurrentLat === null) return;
@@ -3836,18 +3842,22 @@ function refillMudmapTiles() {
   const zoom = mudmapCurrentZoom;
   const tileSize = 256;
 
-  // Convert pixel offset to lat/lon delta and compute new centre
-  const tilesPerPixel = 1 / tileSize;
-  const totalTiles = Math.pow(2, zoom);
+  // Correct conversion: CSS pixels → degrees
+  // At zoom z, one tile = 256px = 360/2^z degrees longitude at equator
+  // Latitude correction: divide lon delta by cos(lat)
+  const degreesPerTile = 360 / Math.pow(2, zoom);
+  const degreesPerPixel = degreesPerTile / tileSize;
 
-  // How many tiles did we pan?
-  const dTileX = -tileOffsetX / tileSize;
-  const dTileY = -tileOffsetY / tileSize;
+  // tileOffsetX is how far the tile canvas moved in CSS pixels
+  // Dragging right (+offsetX) means the map shifted right, so centre moved LEFT (west = negative lon)
+  const dLon = -tileOffsetX * degreesPerPixel;
 
-  // Convert current lat/lon to tile float coords
+  // Latitude: Mercator projection means vertical degrees-per-pixel varies with lat
+  // Use the web mercator formula for precise vertical conversion
   function latLonToTileFloat(lat, lon, z) {
-    const x = (lon + 180) / 360 * Math.pow(2, z);
-    const y = (1 - Math.log(Math.tan(lat * Math.PI / 180) + 1 / Math.cos(lat * Math.PI / 180)) / Math.PI) / 2 * Math.pow(2, z);
+    const n = Math.pow(2, z);
+    const x = (lon + 180) / 360 * n;
+    const y = (1 - Math.log(Math.tan(lat * Math.PI / 180) + 1 / Math.cos(lat * Math.PI / 180)) / Math.PI) / 2 * n;
     return { x, y };
   }
   function tileFloatToLatLon(tx, ty, z) {
@@ -3858,28 +3868,64 @@ function refillMudmapTiles() {
   }
 
   const centre = latLonToTileFloat(mudmapCurrentLat, mudmapCurrentLon, zoom);
+  // tileOffsetX/Y are CSS pixels (logical). Convert to tile units.
+  // The tile canvas is scaled by devicePixelRatio internally but tileSize is 256 CSS px.
+  const dTileX = -tileOffsetX / tileSize;
+  const dTileY = -tileOffsetY / tileSize;
   const newCentre = tileFloatToLatLon(centre.x + dTileX, centre.y + dTileY, zoom);
 
-  // Save drawing layer
+  // Save drawing layer before reload
   const dc = document.getElementById('mudmapCanvas');
   const drawingSnapshot = dc.toDataURL();
 
-  // Reset pan offset
+  // Reset CSS transform and offset tracker
   tileOffsetX = 0;
   tileOffsetY = 0;
   const tc = document.getElementById('mudmapTileCanvas');
   if (tc) tc.style.transform = '';
 
-  // Reload tiles at new centre
+  // Reload tiles centred on new position
   renderOSMTile(newCentre.lat, newCentre.lon, zoom, w, h);
 
-  // Restore drawing layer after tiles load
+  // Restore drawings on top after tiles have loaded
   setTimeout(() => {
     const dctx = dc.getContext('2d');
     const img = new Image();
     img.onload = () => dctx.drawImage(img, 0, 0, w, h);
     img.src = drawingSnapshot;
-  }, 800);
+  }, 1000);
+}
+
+function mudmapZoom(direction) {
+  if (mudmapCurrentLat === null) { showToast('⚠️ Load a map first'); return; }
+  const newZoom = Math.min(19, Math.max(14, mudmapCurrentZoom + direction));
+  if (newZoom === mudmapCurrentZoom) {
+    showToast(direction > 0 ? '🔍 Maximum zoom reached' : '🔍 Minimum zoom reached');
+    return;
+  }
+  const wrap = document.getElementById('mudmapWrap');
+  const w = wrap.offsetWidth;
+  const h = 300;
+
+  // Save drawings
+  const dc = document.getElementById('mudmapCanvas');
+  const drawingSnapshot = dc.toDataURL();
+
+  // Reset pan
+  tileOffsetX = 0;
+  tileOffsetY = 0;
+  const tc = document.getElementById('mudmapTileCanvas');
+  if (tc) tc.style.transform = '';
+
+  renderOSMTile(mudmapCurrentLat, mudmapCurrentLon, newZoom, w, h);
+
+  // Restore drawings after tiles load
+  setTimeout(() => {
+    const dctx = dc.getContext('2d');
+    const img = new Image();
+    img.onload = () => dctx.drawImage(img, 0, 0, w, h);
+    img.src = drawingSnapshot;
+  }, 1000);
 }
 
 function clearMudmap() {
@@ -3944,13 +3990,14 @@ function renderOSMTile(lat, lon, zoom, w, h) {
   const tilesX = Math.ceil(w / tileSize) + 2;
   const tilesY = Math.ceil(h / tileSize) + 2;
 
-  // Set canvas/wrap height
+  // Set canvas/wrap height — tile canvas draws at CSS pixel size (no DPR scaling)
+  // This ensures CSS transform pan offset matches 1:1 with tile pixel positions
   wrap.style.height = h + 'px';
   placeholder.style.display = 'none';
-  tc.width = w * window.devicePixelRatio;
-  tc.height = h * window.devicePixelRatio;
+  tc.width = w;
+  tc.height = h;
+  tc.style.width = '100%';
   tc.style.height = h + 'px';
-  tctx.scale(window.devicePixelRatio, window.devicePixelRatio);
 
   // Also resize drawing canvas
   const dc = document.getElementById('mudmapCanvas');
