--- a/index.html
+++ b/index.html
@@ -312,9 +312,11 @@
     border: 1.5px solid var(--gray-light);
     transition: border-color 0.15s, background 0.15s;
   }
-  .yn-item.yes { background: var(--green-light); border-color: #b7e5d3; }
-  .yn-item.no { background: var(--red-light); border-color: #f5c6c2; }
-  .yn-item.na { background: var(--orange-light); border-color: #f5ddb5; }
+  .yn-item.yes     { background: var(--green-light); border-color: #b7e5d3; }
+  .yn-item.no      { background: var(--red-light); border-color: #f5c6c2; }
+  .yn-item.na      { background: var(--orange-light); border-color: #f5ddb5; }
+  .yn-item.yes-soft { background: #f0faf5; border-color: #cceedd; }
+  .yn-item.no-soft  { background: #fef6f5; border-color: #f5d8d6; }
 
   .yn-question {
     flex: 1;
@@ -1778,16 +1780,16 @@ const ynQuestions = {
     { id: 'manoeuvre', text: 'Is there adequate room within site to manoeuvre vehicle safely?' },
     { id: 'noReverse', text: 'Can vehicle be manoeuvred without reversing on premises?' },
     { id: 'parkingMarked', text: 'Parking and unloading areas are clearly marked or communicated.' },
-    { id: 'gateAccess', text: 'Are any gate codes, swipe access, or key arrangements required?', triggerField: 'keyCodeField', inlineDetails: true },
+    { id: 'gateAccess', text: 'Are any gate codes, swipe access, or key arrangements required?', triggerField: 'keyCodeField', inlineDetails: true, scoreNeutral: true, solidColor: true, reverseColor: true },
   ],
   'b2': [
-    { id: 'siteInduction', text: 'Is a site-specific induction or sign-in process required? (if YES, include details in Notes)' },
+    { id: 'siteInduction', text: 'Is a site-specific induction or sign-in process required? (if YES, include details in Notes)', scoreNeutral: true, reverseColor: true, solidColor: true },
     { id: 'pedestrianAccess', text: 'Is there safe pedestrian access to the tank fill point(s) to undertake delivery?' },
     { id: 'hazardFree', text: 'Is the delivery area/zone free of hazards or obstacles?' },
     { id: 'lighting', text: 'Is adequate lighting provided for early morning or evening deliveries?' },
     { id: 'safetyCones', text: 'Safety cones or barriers are available to secure the delivery zone?' },
     { id: 'tankVents', text: 'Are tank vents fitted, with no signs of overpressure/vacuum stress (e.g. deformation)?' },
-    { id: 'ppeRequired', text: 'Are there any site-specific Personal Protective Equipment (PPE) requirements?', triggerField: 'ppeField' },
+    { id: 'ppeRequired', text: 'Are there any site-specific Personal Protective Equipment (PPE) requirements?', triggerField: 'ppeField', scoreNeutral: true, reverseColor: true, solidColor: true },
   ],
   'b3': [
     { id: 'spillContain', text: 'If a large spill in excess of 20L occurred on site would the product remain on the site?' },
@@ -1808,7 +1810,7 @@ const ynQuestions = {
     { id: 'dedicatedTank', text: 'Storage Tank is dedicated for AdBlue® (AUS 32) use only.' },
     { id: 'tankLabelled', text: 'Storage Tank is clearly labelled as designated for AdBlue® use only.' },
     { id: 'compatMaterials', text: 'Storage Tank/dispensing unit is composed of AdBlue®-compatible materials.<sup>1</sup>' },
-    { id: 'noIncompat', text: 'Tank/dispensing unit does NOT contain copper, brass, aluminium, or uncoated mild steel.<sup>2</sup>', reverseColor: true },
+    { id: 'noIncompat', text: 'Does the Tank/dispensing unit contain copper, brass, aluminium, or uncoated mild steel?<sup>2</sup>', reverseColor: true },
     { id: 'noLeak', text: 'Storage tank is free of visible leak(s)/damage.' },
     { id: 'protectedTemp', text: 'Tank is positioned to protect AdBlue® from direct sunlight and extreme temperatures.' },
     { id: 'tankCleaned', text: 'If re-used or repurposed, tank has been cleaned before first fill with AdBlue®.<sup>3</sup>', hasNA: true },
@@ -1821,9 +1823,9 @@ const ynQuestions = {
     { id: 'dustCap', text: 'The AdBlue® fill point is fitted with a dust cap.' },
   ],
   'e1': [
-    { id: 'photoGate', text: 'I have taken time-stamped photos of the site front gate/entrance.' },
-    { id: 'photoTank', text: 'I have taken time-stamped photos of the delivery zone and AdBlue® tank/fill point.' },
-    { id: 'nonCompComm', text: 'Any identified non-compliances have been clearly communicated to the site representative, along with recommended corrective actions where applicable.' },
+    { id: 'photoGate', text: 'I have taken time-stamped photos of the site front gate/entrance.', scoreNeutral: true },
+    { id: 'photoTank', text: 'I have taken time-stamped photos of the delivery zone and AdBlue® tank/fill point.', scoreNeutral: true },
+    { id: 'nonCompComm', text: 'Any identified non-compliances have been clearly communicated to the site representative, along with recommended corrective actions where applicable.', scoreNeutral: true },
   ],
 };
 
@@ -1860,15 +1862,24 @@ function setYN(id, val, group, triggerField) {
   ynValues[id] = val;
   const item = document.getElementById('ynitem-' + id);
   if (!item) return; // safety check
-  item.classList.remove('yes','no','na');
+  item.classList.remove('yes','no','na','neutral','yes-soft','no-soft');
 
-  // Find the question to check reverseColor flag
   const q = Object.values(ynQuestions).flat().find(q => q.id === id);
   const reverse = q?.reverseColor || false;
+  const neutral = q?.scoreNeutral || false;
+  const solid = q?.solidColor || false;
 
-  if (val === 'Y') item.classList.add(reverse ? 'no' : 'yes');
-  else if (val === 'N') item.classList.add(reverse ? 'yes' : 'no');
-  else if (val === 'NA') item.classList.add('na');
+  if (val === 'NA') {
+    item.classList.add('na');
+  } else if (neutral && !solid) {
+    // scoreNeutral without solidColor: soft muted tones (Section E)
+    if (val === 'Y') item.classList.add(reverse ? 'no-soft' : 'yes-soft');
+    else if (val === 'N') item.classList.add(reverse ? 'yes-soft' : 'no-soft');
+  } else {
+    // scored questions AND solidColor neutrals (gate/induction/ppe): full red/green
+    if (val === 'Y') item.classList.add(reverse ? 'no' : 'yes');
+    else if (val === 'N') item.classList.add(reverse ? 'yes' : 'no');
+  }
 
   // Update button states
   const btns = item.querySelectorAll('.yn-btn');
@@ -1899,21 +1910,42 @@ function setYN(id, val, group, triggerField) {
 
 function checkCorrectiveActionsRequired() {
   const allQs = Object.values(ynQuestions).flat();
+
+  // Scored failures
   const hasFailure = allQs.some(q => {
     const val = ynValues[q.id];
-    if (!val || val === 'NA') return false;
+    if (!val || val === 'NA' || q.scoreNeutral) return false;
     return q.reverseColor ? val === 'Y' : val === 'N';
   });
-  const label = document.getElementById('correctiveActionsLabel');
+
+  // solidColor neutral Y answers (gate/induction/PPE) that need noting
+  const solidYItems = allQs.filter(q => q.solidColor && q.reverseColor && ynValues[q.id] === 'Y');
+  const solidYLabels = solidYItems.map(q => {
+    if (q.id === 'gateAccess')   return 'Gate codes / swipe access / key arrangements required';
+    if (q.id === 'siteInduction') return 'Site-specific induction or sign-in process required';
+    if (q.id === 'ppeRequired')  return 'Site-specific PPE requirements apply';
+    return q.text.replace(/<[^>]+>/g,'');
+  });
+
+  const label    = document.getElementById('correctiveActionsLabel');
   const textarea = document.getElementById('correctiveActions');
-  const hint = document.getElementById('correctiveActionsHint');
-  if (hasFailure) {
+  const hint     = document.getElementById('correctiveActionsHint');
+
+  if (hasFailure || solidYItems.length > 0) {
     if (label) label.classList.add('required');
-    if (hint) { hint.style.display = 'block'; }
-    if (textarea) textarea.placeholder = 'REQUIRED — One or more items failed. Describe corrective actions advised and who is responsible for implementing them...';
+    if (hint)  hint.style.display = 'block';
+
+    let hintMsg = '';
+    if (hasFailure)           hintMsg += '⚠️ <strong>Required</strong> — One or more audit items have failed. You must document corrective actions before submitting.';
+    if (solidYItems.length > 0) {
+      if (hintMsg) hintMsg += '<br>';
+      hintMsg += '📋 <strong>Please note in Corrective Actions:</strong> ' + solidYLabels.join(' · ');
+    }
+    if (hint) hint.innerHTML = hintMsg;
+    if (textarea && !textarea.value) textarea.placeholder = 'REQUIRED — Document corrective actions and/or site-specific requirements (gate codes, induction, PPE) below...';
   } else {
     if (label) label.classList.remove('required');
-    if (hint) { hint.style.display = 'none'; }
+    if (hint)  hint.style.display = 'none';
     if (textarea) textarea.placeholder = 'If any non-compliance identified under C.2, indicate corrective actions advised and who is responsible for implementing them...';
   }
 }
@@ -2183,8 +2215,8 @@ function updateAuditResults() {
     if (!val) {
       unanswered++;
       missed.push({ section: sectionLabels[q.section] || q.section, text: q.text.replace(/<[^>]+>/g,'') });
-    } else if (val === 'NA') {
-      // N/A excluded
+    } else if (val === 'NA' || q.scoreNeutral) {
+      // N/A and score-neutral questions excluded from pass/fail count
     } else {
       const isGood = q.reverseColor ? val === 'N' : val === 'Y';
       if (isGood) green++; else red++;
@@ -2948,7 +2980,7 @@ async function generatePDF(returnDoc=false) {
   nonC2Qs.forEach(q => {
     const val = d.ynValues[q.id];
     if (!val) pdfUnanswered++;
-    else if (val !== 'NA') {
+    else if (val !== 'NA' && !q.scoreNeutral) {
       const good = q.reverseColor ? val === 'N' : val === 'Y';
       if (good) pdfGreen++; else pdfRed++;
     }
@@ -3269,10 +3301,17 @@ async function fillTestData() {
       if (!item) { console.warn('Missing ynitem:', id); return; }
       const q = Object.values(ynQuestions).flat().find(q => q.id === id);
       const reverse = q?.reverseColor || false;
-      item.classList.remove('yes','no','na');
-      if (val === 'Y') item.classList.add(reverse ? 'no' : 'yes');
-      else if (val === 'N') item.classList.add(reverse ? 'yes' : 'no');
-      else if (val === 'NA') item.classList.add('na');
+      const neutral = q?.scoreNeutral || false;
+      const solid = q?.solidColor || false;
+      item.classList.remove('yes','no','na','neutral','yes-soft','no-soft');
+      if (val === 'NA') item.classList.add('na');
+      else if (neutral && !solid) {
+        if (val === 'Y') item.classList.add(reverse ? 'no-soft' : 'yes-soft');
+        else if (val === 'N') item.classList.add(reverse ? 'yes-soft' : 'no-soft');
+      } else {
+        if (val === 'Y') item.classList.add(reverse ? 'no' : 'yes');
+        else if (val === 'N') item.classList.add(reverse ? 'yes' : 'no');
+      }
       item.querySelectorAll('.yn-btn').forEach(b => {
         b.classList.remove('active-y','active-n','active-na');
         if (b.textContent === 'Y' && val === 'Y') b.classList.add('active-y');
@@ -3327,6 +3366,8 @@ async function fillTestData() {
   updateProgress();
   updateComplianceBanner();
   updateAuditResults();
+  checkC2Compliance();
+  checkCorrectiveActionsRequired();
 
   showToast('⚡ Test data loaded — ready to test!');
   window.scrollTo({ top: 0, behavior: 'smooth' });
@@ -3344,7 +3385,7 @@ async function saveAndSend() {
   const allQs = Object.values(ynQuestions).flat();
   const hasFailure = allQs.some(q => {
     const val = ynValues[q.id];
-    if (!val || val === 'NA') return false;
+    if (!val || val === 'NA' || q.scoreNeutral) return false;
     return q.reverseColor ? val === 'Y' : val === 'N';
   });
 
